# coffee-pos

./: .gitignore  DESKTOP-SETUP.md  FILE-MANIFEST.md  NETWORK_TROUBLESHOOTING.md  README.md  RELEASE-GUIDE.md  SETUP.md  package-lock.json  package.json  setup-dual-screen.bat  setup-dual-screen.sh  setup-windows.bat
.github/workflows/: build-windows.yml  create-release.yml
backend/: .env.example  .env.test  .sequelizerc  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  logger.middleware.ts  main.ts
backend/test/: analytics.e2e-spec.ts  api.e2e-spec.ts  campaigns.e2e-spec.ts  jest-e2e.json  (+9 more)
desktop/: .gitignore  ARCHITECTURE.md  BUILD-CHECKLIST.md  QUICK-FIX.md  QUICK-START.md  README.md  TROUBLESHOOTING-WINDOWS.md  WINDOWS-BUILD-GUIDE.md  build-windows.bat  build.bat  build.sh  package-lock.json  package.json  setup-complete.bat  setup-mongodb.bat  verify-build.bat
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/resources/backend/: package.json
desktop/src-tauri/resources/mongodb/: README.md  mongod.cfg
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE-DIAGRAM.md  DUAL-SCREEN-QUICK-START.md  DUAL-SCREEN-SETUP.md  GIFT-CHAIN-VISUAL-CONSTRAINTS.md  IMPLEMENTATION-DUAL-SCREEN.md  IMPLEMENTATION-SUMMARY.md  TESTING-CHECKLIST.md
frontend/: .env.local  .env.production  .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+161 files in other folders)
