[package]
name = "cafe-pos"
version = "1.0.0"
description = "Cafe Point of Sale Desktop Application"
authors = ["Cafe POS Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-dir", "path-all", "fs-remove-file", "fs-create-dir", "fs-exists", "fs-remove-dir", "fs-read-file", "shell-open"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
